fix: Fix nav item spacing on AdminScene's Navbar

--- a/app/src/main/resources/styles/AdminScene.css
+++ b/app/src/main/resources/styles/AdminScene.css
@@ -30,7 +30,7 @@
 .containerNavbar {
   -fx-background-color: rgb(71, 0, 71);
   -fx-pref-height: 600px;
-  -fx-spacing: 325px;
+  -fx-spacing: 260px;
 }
 
 .containerNavbar > .containerNavbarMenu {
